src/recipes/static/recipes/css/styles.css
 .body{
    width: 100%;
    padding: 0;
    margin: 0;
 }

 .nav-bar{
    width: 80vw;
    height: 10vh;
    margin: 0 auto;
    margin-bottom: 30px;
    border-radius: 20px;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: space-between;
 }

 #search {
    background-color: rgba(255, 255, 255, 255.5);
    border: 1px solid black;
    border-radius: 7px;
    height: 40px;
    margin: 12px 80px 12px 0;
    width: 300px;
    font-family: 'Roboto Mono', 'Calibri', 'Trebuchet MS', sans-serif;
    font-size: 17px;
}

#logo {
    margin: 4px 0 4px 80px;
    border-radius: 3px; 
}

.recipe-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    padding: 23px 0 23px 23px;
    grid-gap: 23px;
    background: rgba(0, 0, 0, 0.5);
    width: 70vw;
    margin: 0 auto;
    border-radius: 20px;
}

.grid_item {
    background-color: rgba(225, 225, 225, 0.5);
    border: 1px solid black;
    border-radius: 7px;
    width: 40vh;
    padding: 0 0 15px 15px;
    font-family: 'Roboto Mono', 'Calibri', 'Trebuchet MS', sans-serif;
}

.food-items{
    width: 250px;
    height: 160px;
    border-radius: 6px;
    margin: 0 auto;
}

.recipe-name{
    color: black;
    font-size: 25px;
    text-decoration: none;
}

.recipe-name:hover {
    color: rgb(132, 97, 11);
}

.detail_modal {
    width: 55%;
    background-color: rgba(225, 225, 225, 0.9);
    border-radius: 10px;
    padding: 25px;
    box-shadow: 5px 10px 15px;
    margin: 0 auto;
    margin-top: 23vh;
    font-family: 'Roboto Mono', 'Calibri', 'Trebuchet MS', sans-serif;
}

.details_body{
    display: flex;
}

.detail_short, .detail_long{
    padding: 8px;
}

.special-thanks {
    display: flex;
    align-items: baseline;
    justify-content: center;
}

.thanking-text {
    color: darkblue;
}

.thanks {
    color: darkblue;
    text-decoration: none;
}

